--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,18 @@
 location / {
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
     if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Headers' 'Range' always;
         add_header 'Content-Length' 0;
         return 204;
     }
     if ($request_method = 'GET') {
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Range' always;
+        return 200;
+    }
+    if ($request_method = 'HEAD') {
+        add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
         return 200;
     }
