fix Content-Range header

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,7 @@ location / {
     }
     if ($request_method = 'GET') {
         add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length','Content-Range' always;
         return 200;
     }
     if ($request_method = 'HEAD') {
