adding comments to nginx.conf sample

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,7 @@
+# find location in server section
 location / {
+    # add the following, to enable CORS
+    # CORS OPTIONS
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Headers' 'Range' always;
@@ -6,10 +9,14 @@ location / {
         add_header 'Content-Length' 0;
         return 204;
     }
+    
+    # CORD HEAD
     if ($request_method = 'HEAD') {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
     }
+    
+    # CORS GET
     if ($request_method = 'GET') {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length, Content-Range' always;
