--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ location / {
         return 204;
     }
     
-    # CORD HEAD
+    # CORS HEAD
     if ($request_method = 'HEAD') {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
